devops/Docker/Caronte/proyectos/personal/kubernetes/namespace-miportfolio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: miportfolio-helm
  labels:
    name: miportfolio-helm
