devops/Docker/Caronte/proyectos/personal/kubernetes/service-miportfolio.yml
apiVersion: v1
kind: Service
metadata:
  name: carmen-service
  namespace: miportfolio-helm
spec:
  type: NodePort
  selector:
    app: webcarmen
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30084
