devops/Docker/Caronte/proyectos/personal/kubernetes/ingress-miportfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miportfolio-ingress
  namespace: { { .Release.Namespace } }
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: webmiportfolio.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miportfolio
                port:
                  number: 80
    - host: www.webmiportfolio.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miportfolio
                port:
                  number: 80
